RESOLVED FIXED154741
Modern IDB: New database versions are never committed to SQLite
https://bugs.webkit.org/show_bug.cgi?id=154741
Summary Modern IDB: New database versions are never committed to SQLite
Brady Eidson
Reported 2016-02-26 11:43:48 PST
Modern IDB: New database versions are never committed to SQLite <rdar://problem/24860952>
Attachments
Patch v1 (25.05 KB, patch)
2016-02-26 15:32 PST, Brady Eidson
achristensen: review+
commit-queue: commit-queue-
Patch for landing (25.10 KB, patch)
2016-02-26 19:49 PST, Brady Eidson
no flags
Brady Eidson
Comment 1 2016-02-26 15:26:13 PST
Also noticed https://bugs.webkit.org/show_bug.cgi?id=154756 while working on this.
Brady Eidson
Comment 2 2016-02-26 15:32:55 PST
Created attachment 272376 [details] Patch v1
WebKit Commit Bot
Comment 3 2016-02-26 17:20:47 PST
Comment on attachment 272376 [details] Patch v1 Rejecting attachment 272376 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-02', 'validate-changelog', '--check-oops', '--non-interactive', 272376, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit /Volumes/Data/EWS/WebKit/Source/WebKit2/ChangeLog neither lists a valid reviewer nor contains the string "Unreviewed" or "Rubber stamp" (case insensitive). Full output: http://webkit-queues.webkit.org/results/888131
Brady Eidson
Comment 4 2016-02-26 19:49:31 PST
Created attachment 272394 [details] Patch for landing
WebKit Commit Bot
Comment 5 2016-02-26 20:39:02 PST
Comment on attachment 272394 [details] Patch for landing Clearing flags on attachment: 272394 Committed r197231: <http://trac.webkit.org/changeset/197231>
Note You need to log in before you can comment on or make changes to this bug.