Source/WebKit2/UIProcess/API/Cocoa/WKProcessPoolPrivate.h
@@ -61,6 +61,9 @@
 - (void)_automationCapabilitiesDidChange WK_AVAILABLE(WK_MAC_TBA, WK_IOS_TBA);
 - (void)_setAutomationSession:(_WKAutomationSession *)automationSession WK_AVAILABLE(WK_MAC_TBA, WK_IOS_TBA);
 
+// Test only. Should be called only while no web content processes are running.
+- (void)_terminateDatabaseProcess;
+
 @end
 
 #endif
