Source/WebKit2/UIProcess/WebProcessPool.h
@@ -244,6 +244,7 @@ public:
     bool isUsingTestingNetworkSession() const { return m_shouldUseTestingNetworkSession; }
 
     void clearCachedCredentials();
+    void terminateDatabaseProcess();
 
     void allowSpecificHTTPSCertificateForHost(const WebCertificateInfo*, const String& host);
 
